// SPDX-FileCopyrightText: 2025 Shun Sakai
//
// SPDX-License-Identifier: GPL-3.0-or-later

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/ngrv
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.1.0\...HEAD[Unreleased]

=== Added

* Add demo animation ({pull-request-url}/5[#5])
* Add `--quiet` option ({pull-request-url}/11[#11])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2025-03-27

=== Added

* Initial release